--- a/index.html
+++ b/index.html
@@ -333,6 +333,14 @@
         video.paused ? video.play() : video.pause()
       }
 
+      function playVideo() {
+        video.paused ? video.play(): null;
+      }
+
+      function pauseVideo() {
+        !video.paused ? video.pause() : null;
+      }
+
       video.addEventListener("play", () => {
         videoContainer.classList.remove("paused")
       })
@@ -584,13 +592,16 @@
         }
 
         let htmlMaker = '';
+        // console.log(blendShapes[0].categories[48].categoryName,blendShapes[0].categories[48].score * 10)
+        // console.log(blendShapes[0].categories[49].categoryName,blendShapes[0].categories[49].score * 10)
         blendShapes[0].categories.map((shape) => {
+          // console.log(shape.categoryName +' <=> '+(shape.score * 10).toFixed(4))
           htmlMaker += `
             <li class="blend-shapes-item">
               <span class="blend-shapes-label">${shape.displayName || shape.categoryName}</span>
               <span class="blend-shapes-value" style="width: calc(${
               +shape.score * 100
-            }% - 120px)">${(+shape.score).toFixed(4)}</span>
+            }% - 120px)">${(+shape.score * 10).toFixed(4)}</span>
             </li>
           `;
         });
